--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 astroid==2.9.3
 black==22.1.0
 click==8.0.3
+Flask==2.0.2
 isort==5.10.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
 lazy-object-proxy==1.7.1
+MarkupSafe==2.0.1
 mccabe==0.6.1
 mypy==0.931
 mypy-extensions==0.4.3
@@ -13,4 +17,5 @@ pylint==2.12.2
 toml==0.10.2
 tomli==2.0.0
 typing_extensions==4.0.1
+Werkzeug==2.0.2
 wrapt==1.13.3
